k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: venudev.duckdns.org
      http:
        paths:
          - path: /staging
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
